
	* generic/tclClock.c: Fixed a bad refcount in previous commit that
	led to a corrupted heap. Also silenced a warning that some
	compilers gave about the excessively long constant for
	JULIAN_SEC_POSIX_EPOCH.  Also fixed a bug where [clock format]
	would fail in the :localtime zone for times before the Posix
	Epoch.  Thanks to Miguel Sofer for pointing out all of these.

2005-11-29  Kevin Kenny  <kennykb@acm.org>

	* generic/tclBasic.c:	Moved a big part of [clock format] down
	* generic/tclClock.c:   to the C level in order to make it go faster.
	* generic/tclInt.h:     Preliminary measurements suggest that it
	* generic/clock.tcl:    more than doubles in speed with this change.

2005-11-29  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tclCmdIL.c (Tcl_LsearchObjCmd): Allow [lsearch -regexp] to
	process REs that contain backreferences. This expensive mode of
	operation is only used if the RE would otherwise cause a compilation
	failure. [Bug 1366683]

2005-11-28  Kevin Kenny  <kennykb@acm.org>

	* tools/tclZIC.tcl (convertTimeOfDay): Corrected a typo that
	caused wrong DST transitions in any time zone where the transition
	is specified as local Standard Time (as opposed to wall-clock or
	UTC).  (Also updated the code to be bignum-safe.)
	* tests/clock.test (clock-51.1): Added regression test for the
	above.
	* library/tzdata: Updated to Olson's 'tzdata2005o' (changes
	for Cuba, Nicaragua, Jordan, and Georgia) and regenerated.
	Thanks to Paul Mackerras for reporting this problem.

2005-11-27  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): add 64bit support, check for Tiger copyfile(),
	add CFLAGS to SHLIB_LD to support passing -isysroot in env(CFLAGS) to
	configure (flag can't be present twice, so can't be in both CFLAGS and
	LDFLAGS during configure), don't use -prebind when deploying on 10.4,
	define TCL_IO_TRACK_OS_FOR_DRIVER_WITH_BAD_BLOCKING (rdar://3171542).